--- a/mathml/math.xhtml
+++ b/mathml/math.xhtml
@@ -7,69 +7,56 @@
 <meta charset="utf-8" />
 </head>
 <body>
-	<h1>Example of MathML embedded in an HTML5 file</h1>
 	<p>
 		Given the quadratic equation
 		<math xmlns="http://www.w3.org/1998/Math/MathML">
-		<mrow>
-		<mi>a</mi>
-		<mo>
-		&InvisibleTimes;
-		</mo>
-		<msup>
-		<mi>x</mi>
-		<mn>2</mn>
-		</msup>
-		<mo>+</mo>
-		<mi>b</mi>
-		<mo>
-		&InvisibleTimes;
-		</mo>
-		<mi>x</mi>
-		<mo>+</mo>
-		<mi>c</mi>
-		<mo>=</mo>
-		<mi>0</mi>
-		</mrow>
-		</math>
-		, the roots are given by
-		<math>
-		<mrow>
-		<mi>x</mi>
-		<mo>=</mo>
-		<mfrac>
-		<mrow>
-		<mo form="prefix">−</mo>
-		<mi>b</mi>
-		<mo>
-		&PlusMinus;
-		</mo>
-		<msqrt>
-		<msup>
-		<mi>b</mi>
-		<mn>2</mn>
-		</msup>
-		<mo>−</mo>
-		<mn>4</mn>
-		<mo>
-		&InvisibleTimes;
-		</mo>
-		<mi>a</mi>
-		<mo>
-		&InvisibleTimes;
-		</mo>
-		<mi>c</mi>
-		</msqrt>
-		</mrow>
-		<mrow>
-		<mn>2</mn>
-		<mo>
-		&InvisibleTimes;
-		</mo>
-		<mi>a</mi>
-		</mrow>
-		</mfrac>
-		</mrow>
+        <mrow>
+          <mi>a</mi>
+          <mo>&InvisibleTimes;</mo>
+          <msup>
+            <mi>x</mi>
+            <mn>2</mn>
+          </msup>
+          <mo>+</mo>
+          <mi>b</mi>
+          <mo>&InvisibleTimes;</mo>
+          <mi>x</mi>
+          <mo>+</mo>
+          <mi>c</mi>
+          <mo>=</mo>
+          <mi>0</mi>
+        </mrow>
+      </math>
+      , the roots are given by
+      <math xmlns="http://www.w3.org/1998/Math/MathML">
+        <mrow>
+          <mi>x</mi>
+          <mo>=</mo>
+          <mfrac>
+            <mrow>
+              <mo form="prefix">−</mo>
+              <mi>b</mi>
+              <mo>&PlusMinus;</mo>
+              <msqrt>
+                <msup>
+                  <mi>b</mi>
+                  <mn>2</mn>
+                </msup>
+                <mo>−</mo>
+                <mn>4</mn>
+                <mo>&InvisibleTimes;</mo>
+                <mi>a</mi>
+                <mo>&InvisibleTimes;</mo>
+                <mi>c</mi>
+              </msqrt>
+            </mrow>
+            <mrow>
+              <mn>2</mn>
+              <mo>&InvisibleTimes;</mo>
+              <mi>a</mi>
+            </mrow>
+          </mfrac>
+        </mrow>
 		</math>
 		.
 	</p>
